tests/transpiler/x/java/map_assign.java
public class Main {
    static java.util.Map<String, Integer> scores = java.util.Map.of("alice", 1);

    public static void main(String[] args) {
        System.out.println(scores["bob"]);
    }
}
